force-app/main/default/objects/echosign_dev1__SIGN_SignedAgreement__c/echosign_dev1__SIGN_SignedAgreement__c.object-meta.xml
<CustomObject>
    <label>Signed Agreement</label>
    <nameField>
        <displayFormat>AP{000000}</displayFormat>
        <label>Agreement Page Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signed Agreement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>