force-app/main/default/objects/echosign_dev1__SIGN_SignedAgreement__c/fields/echosign_dev1__Image__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Image__c</fullName>
    <formula>IF( LEN( echosign_dev1__ImageUrl__c )&gt;0, IMAGE( echosign_dev1__ImageUrl__c, &quot;Thumbnail&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>