force-app/main/default/objects/echosign_dev1__SIGN_SignedAgreement__c/fields/echosign_dev1__ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__ImageUrl__c</fullName>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>