force-app/main/default/objects/echosign_dev1__SIGN_SignedAgreement__c/fields/echosign_dev1__Page__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Page__c</fullName>
    <label>Page</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>