force-app/main/default/objects/echosign_dev1__SIGN_SignedAgreement__c/fields/echosign_dev1__SIGN_Agreement__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__SIGN_Agreement__c</fullName>
    <label>Agreement</label>
    <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
    <relationshipLabel>Signed Agreement</relationshipLabel>
    <relationshipName>Signed_Agreements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>